--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>Materialize Colors</title>
+<link rel="icon" href="https://materializecss.com/images/favicon/favicon-32x32.png" sizes="32x32">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <div id="palette" class="section scrollspy">
 
